se acutualiza informacion en index principal

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <main>
         <header>
-            <h1>Java</h1>
-            <p>Java es un lenguaje de programación de propósito general, concurrente, orientado
+            <h1>Campo de Estudio</h1>
+            <p>Este sitio brinda informacion sobnre los diferentes tecnologias de programacion para aprendrer a programar en variso lenguajes y empezar a desarrollar tus propios proyectos.</p>
         </header>
         <aside>
             <h2>Características</h2>
