se actualiza el archivo index con el contenido y su estructura.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>Campo de Estudio</h1>
             <p>Este sitio brinda informacion sobnre los diferentes tecnologias de programacion para aprendrer a programar en variso lenguajes y empezar a desarrollar tus propios proyectos.</p>
         </header>
+        <div class="container_principal">
         <aside>
             <h2>Características</h2>
             <ul>
@@ -24,9 +25,9 @@
         </aside>
         <section>
             <h2>Historia</h2>
-            <p>Java fue desarrollado por James Gosling en Sun Microsystems y lanzado en 1995. Desde entonces, ha evolucionado a través de múltiples versiones, cada una agregando nuevas características y mejoras.</p>
+            <p>Lo que se quiere lograr es estener un espacio de estudio, para el crecimiento personal y profesional</p>
         </section>
-
+        </div>
         <footer>
             <p>&copy; 2024 Información sobre Java</p>
         </footer>
