se agrega link para navegar a las tenologias

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li>Seguro y robusto</li>
                 <li>Multihilo</li>
                 <li>Alto rendimiento</li>
+                <li><a href="./Tecnologias/Html/html.html" target="_blank">Html</a></li>
             </ul>
         </aside>
         <section>
