se agrega Remix icon y se acomoda mejor la estructura del html

--- a/index.html
+++ b/index.html
@@ -1,37 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
+
     <title>Desarrollo web</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <header>
-            <h1>Campo de Estudio</h1>
-            <p>Este sitio brinda informacion sobnre los diferentes tecnologias de programacion para aprendrer a programar en variso lenguajes y empezar a desarrollar tus propios proyectos.</p>
-        </header>
-        <div class="container_principal">
+      <header>
+        <h1>Campo de Estudio</h1>
+        <p>
+          Este sitio brinda informacion sobnre los diferentes tecnologias de
+          programacion para aprendrer a programar en variso lenguajes y empezar
+          a desarrollar tus propios proyectos.
+        </p>
+      </header>
+      <div class="container_principal">
         <aside>
-            <h2>Características</h2>
-            <ul>
-                <li>Orientado a objetos</li>
-                <li>Independiente de la plataforma</li>
-                <li>Seguro y robusto</li>
-                <li>Multihilo</li>
-                <li>Alto rendimiento</li>
-                <li><a href="./Tecnologias/Html/html.html" target="_blank">Html</a></li>
-            </ul>
+          <h2>Características</h2>
+          <ul>
+            <li>Orientado a objetos</li>
+            <li>Independiente de la plataforma</li>
+            <li>Seguro y robusto</li>
+            <li>Multihilo</li>
+            <li>Alto rendimiento</li>
+            <li>
+              <a href="./Tecnologias/Html/html.html" target="_blank">Html</a>
+            </li>
+          </ul>
         </aside>
-        <section>
-            <h2>Historia</h2>
-            <p>Lo que se quiere lograr es estener un espacio de estudio, para el crecimiento personal y profesional</p>
+        <section class="containerCards">
+          <h2>Tecnologias</h2>
+          <div class="container_cards">
+            <div class="card_html cards">
+              <picture>
+                <img src="./html5-line.svg" alt="#" />
+              </picture>
+            </div>
+            <div class="card_html cards">
+              <i class="ri-github-fill"></i>
+            </div>
+            <div class="card_html cards">
+              <h3>JS</h3>
+            </div>
+            <div class="card_html cards">
+              <h3>TS</h3>
+            </div>
+          </div>
         </section>
-        </div>
-        <footer>
-            <p>&copy; 2024 Información sobre Java</p>
-        </footer>
+      </div>
+      <footer>
+        <p>&copy; 2024 Información sobre Java</p>
+      </footer>
     </main>
-</body>
+  </body>
 </html>
