--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
     <title>Desarrollo web</title>
+    <!-- Tailwind directo por CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <main>
+  <body class="bg-gray-100 p-8">
+    <main class="bg-">
       <header>
         <h1>Campo de Estudio</h1>
         <p>
@@ -37,17 +41,23 @@
           <div class="container_cards">
             <div class="card_html cards">
               <picture>
-                <img src="./html5-line.svg" alt="#" />
+                <i class="ri-html-fill icons"></i>
               </picture>
             </div>
             <div class="card_html cards">
-              <i class="ri-github-fill"></i>
+              <i class="bi bi-person"></i>
             </div>
             <div class="card_html cards">
-              <h3>JS</h3>
+              <i
+                class="bi bi-typescript"
+                style="font-size: 1.7rem; color: cornflowerblue"
+              ></i>
             </div>
             <div class="card_html cards">
-              <h3>TS</h3>
+              <i
+                class="ri-javascript-fill icons"
+                style="font-size: 2rem; color: rgb(255, 255, 2)"
+              ></i>
             </div>
           </div>
         </section>
