se agrega estilos con tailwind y boststrap

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 p-8">
-    <main class="bg-">
-      <header>
+    <main class="max-w-[1200px] h-screen mx-auto bg-white p-6 rounded-lg shadow-md">
+      <header max-w-[1200px]>
         <h1>Campo de Estudio</h1>
         <p>
           Este sitio brinda informacion sobnre los diferentes tecnologias de
@@ -22,8 +22,8 @@
           a desarrollar tus propios proyectos.
         </p>
       </header>
-      <div class="container_principal">
-        <aside>
+      <div class="mx-w-[1200px] h-[90%] flex justify-between items-center">
+        <aside class="w-[25%] h-full mr-[20px] bg-[#333] text-white pt-[10px] pl-[30px]">
           <h2>Características</h2>
           <ul>
             <li>Orientado a objetos</li>
