--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 p-8">
-    <main class="max-w-[1200px] h-screen mx-auto bg-white p-6 rounded-lg shadow-md">
-      <header max-w-[1200px]>
+    <main
+      class="max-w-[1200px] h-[700px] mx-auto bg-white p-6 rounded-lg shadow-md"
+    >
+      <header>
         <h1>Campo de Estudio</h1>
         <p>
           Este sitio brinda informacion sobnre los diferentes tecnologias de
@@ -23,7 +25,9 @@
         </p>
       </header>
       <div class="mx-w-[1200px] h-[90%] flex justify-between items-center">
-        <aside class="w-[25%] h-full mr-[20px] bg-[#333] text-white pt-[10px] pl-[30px]">
+        <aside
+          class="w-[25%] h-full mr-[20px] bg-[#333] text-white pt-[10px] pl-[30px]"
+        >
           <h2>Características</h2>
           <ul>
             <li>Orientado a objetos</li>
@@ -36,33 +40,45 @@
             </li>
           </ul>
         </aside>
-        <section class="containerCards">
+        <section
+          class="w-[75%] h-full bg-[#e2e2e2] pt-[10px] pb-[10px] px-[20px] pl-[20px] rounded-lg"
+        >
           <h2>Tecnologias</h2>
-          <div class="container_cards">
-            <div class="card_html cards">
+          <div class="flex gap-[20px] mt-[20px]">
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300 icons"
+            >
               <picture>
                 <i class="ri-html-fill icons"></i>
               </picture>
             </div>
-            <div class="card_html cards">
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300 icons"
+            >
               <i class="bi bi-person"></i>
             </div>
-            <div class="card_html cards">
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300 icons"
+            >
               <i
                 class="bi bi-typescript"
                 style="font-size: 1.7rem; color: cornflowerblue"
               ></i>
             </div>
-            <div class="card_html cards">
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
               <i
-                class="ri-javascript-fill icons"
-                style="font-size: 2rem; color: rgb(255, 255, 2)"
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
               ></i>
             </div>
           </div>
         </section>
       </div>
-      <footer>
+      <footer
+        class="mx-w-[1200px] mt-4 text-center p-[10px] bg-[#333] text-[#fff]"
+      >
         <p>&copy; 2024 Información sobre Java</p>
       </footer>
     </main>
