se configura mejor la estructura del html y se agregan mas cards.

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <!-- Tailwind directo por CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gray-100 p-8">
+  <body class="w-full h-full bg-gray-100 p-8">
+    <header class="bg-[#333] text-white p-6 rounded-lg shadow-md mb-6">
+      <h1>Campo de Estudio</h1>
+      <p>
+        Este sitio brinda informacion sobnre los diferentes tecnologias de
+        programacion para aprendrer a programar en variso lenguajes y empezar a
+        desarrollar tus propios proyectos.
+      </p>
+    </header>
     <main
-      class="max-w-[1200px] h-[700px] mx-auto bg-white p-6 rounded-lg shadow-md"
+      class="max-w-[1200px] h-[800px] mx-auto bg-white p-6 rounded-lg shadow-md"
     >
-      <header>
-        <h1>Campo de Estudio</h1>
-        <p>
-          Este sitio brinda informacion sobnre los diferentes tecnologias de
-          programacion para aprendrer a programar en variso lenguajes y empezar
-          a desarrollar tus propios proyectos.
-        </p>
-      </header>
       <div class="mx-w-[1200px] h-[90%] flex justify-between items-center">
         <aside
           class="w-[25%] h-full mr-[20px] bg-[#333] text-white pt-[10px] pl-[30px]"
@@ -44,18 +44,18 @@
           class="w-[75%] h-full bg-[#e2e2e2] pt-[10px] pb-[10px] px-[20px] pl-[20px] rounded-lg"
         >
           <h2>Tecnologias</h2>
-          <div class="flex gap-[20px] mt-[20px]">
+          <div class="flex gap-[20px] mt-[20px] bg-[#e2e2e2] flex-wrap">
             <div
               class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300 icons"
             >
               <picture>
-                <i class="ri-html-fill icons"></i>
+                <i class="bi bi-filetype-html text-[#de2e03]"></i>
               </picture>
             </div>
             <div
               class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300 icons"
             >
-              <i class="bi bi-person"></i>
+              <i class="bi bi-css"></i>
             </div>
             <div
               class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300 icons"
@@ -73,14 +73,176 @@
                 style="font-size: 1.7rem; color: rgb(255, 255, 2)"
               ></i>
             </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i class="bi bi-git"></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i class="bi bi-github"></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
+            <div
+              class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
+            >
+              <i
+                class="bi bi-javascript"
+                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
+              ></i>
+            </div>
           </div>
         </section>
       </div>
-      <footer
-        class="mx-w-[1200px] mt-4 text-center p-[10px] bg-[#333] text-[#fff]"
-      >
-        <p>&copy; 2024 Información sobre Java</p>
-      </footer>
     </main>
+    <footer
+      class="mx-w-[1200px] mt-4 text-center p-[10px] bg-[#333] text-[#fff]"
+    >
+      <p>&copy; 2024 Solo para estudio de Programación.</p>
+    </footer>
   </body>
 </html>
