se actualiza html de la carpeta Html

--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -8,5 +8,14 @@
 <body>
     <h1>Hello World</h1>
     <p>This is a paragraph in HTML.</p>
+    <main>
+        <section>
+            <h2>Ejercicios en HTML</h2>
+            <p>Contenedor de ejercicio realizados en htmlt.</p>
+        </section>
+        <section>
+            <p>Contenedor</p>
+        </section>
+    </main>
 </body>
 </html>
