--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Tailwind directo por CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="w-full h-full bg-gray-100 p-8">
+  <body class="w-full h-full bg-[#606060] p-8">
     <header class="bg-[#333] text-white p-6 rounded-lg shadow-md mb-6">
       <h1>Campo de Estudio</h1>
       <p>
@@ -48,9 +48,8 @@
             <div
               class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300 icons"
             >
-              <picture>
-                <i class="bi bi-filetype-html text-[#de2e03]"></i>
-              </picture>
+               <a href="./Tecnologias/Html/html.html" target="_blank"><i class="bi bi-filetype-html text-[#de2e03]"></i></a>
+
             </div>
             <div
               class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300 icons"
@@ -86,10 +85,7 @@
             <div
               class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
             >
-              <i
-                class="bi bi-javascript"
-                style="font-size: 1.7rem; color: rgb(255, 255, 2)"
-              ></i>
+              <i class="bi bi-bootstrap-fill text-[#d980f9]"></i>
             </div>
             <div
               class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300"
