--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
     <title>Html Learn</title>
-</head>
-<body>
+    <!-- Tailwind directo por CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="w-full h-full bg-[#606060] flex-row justify-center align-center">
     <h1>Hello World</h1>
     <p>This is a paragraph in HTML.</p>
-    <main>
-        <section>
-            <h2>Ejercicios en HTML</h2>
-            <p>Contenedor de ejercicio realizados en htmlt.</p>
-        </section>
-        <section>
-            <p>Contenedor</p>
-        </section>
+    <main class="max-w-[1200px] text-[#fff] flex-row justify-center align-center gap-4">
+      <section >
+        <h2>Ejercicios en HTML</h2>
+        <p>Contenedor de ejercicio realizados en htmlt.</p>
+      </section>
+      <section>
+        <span>
+          <i class="bi bi-window-sidebar"></i>
+        </span>
+      </section>
     </main>
-</body>
+  </body>
 </html>
