--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -11,19 +11,21 @@
     <!-- Tailwind directo por CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="w-full h-full bg-[#606060] flex-row justify-center align-center">
+
+  <body class="w-full h-full bg-[#606060] flex flex-col justify-center items-center text-[#fff] p-4">
     <h1>Hello World</h1>
     <p>This is a paragraph in HTML.</p>
-    <main class="max-w-[1200px] text-[#fff] flex-row justify-center align-center gap-4">
+    <main class="max-w-[1200px] text-[#333] flex flex-col justify-center items-center gap-4 bg-[#fff] p-4 m-4 rounded-lg">
       <section >
         <h2>Ejercicios en HTML</h2>
         <p>Contenedor de ejercicio realizados en htmlt.</p>
       </section>
       <section>
-        <span>
+        <span class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white">
           <i class="bi bi-window-sidebar"></i>
         </span>
       </section>
     </main>
   </body>
+
 </html>
