--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -15,15 +15,18 @@
   <body class="w-full h-full bg-[#606060] flex flex-col justify-center items-center text-[#fff] p-4">
     <h1>Hello World</h1>
     <p>This is a paragraph in HTML.</p>
-    <main class="max-w-[1200px] text-[#333] flex flex-col justify-center items-center gap-4 bg-[#fff] p-4 m-4 rounded-lg">
+    <main class="max-w-[1200px] h-[600px] text-[#333] flex flex-col justify-center items-center gap-4 bg-[#fff] p-4 m-4 rounded-lg">
       <section >
         <h2>Ejercicios en HTML</h2>
         <p>Contenedor de ejercicio realizados en htmlt.</p>
       </section>
       <section>
-        <span class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white">
+        <article class=" max-w-[150px] h-[100px] flex flex-row gap-4 justify-evenly items-center">
+          <span class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white">
           <i class="bi bi-window-sidebar"></i>
         </span>
+        </article>
+
       </section>
     </main>
   </body>
