se agrega la estructura de las card se crean articles

--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -12,23 +12,176 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="w-full h-full bg-[#606060] flex flex-col justify-center items-center text-[#fff] p-4">
+  <body
+    class="w-full h-full bg-[#606060] flex flex-col justify-center items-center text-[#fff] p-4"
+  >
     <h1>Hello World</h1>
     <p>This is a paragraph in HTML.</p>
-    <main class="max-w-[1200px] h-[600px] text-[#333] flex flex-col justify-center items-center gap-4 bg-[#fff] p-4 m-4 rounded-lg">
-      <section >
+    <main
+      class="w-[1200px] h-[600px] text-[#333] flex flex-col justify-start items-center gap-4 bg-[#fff] p-4 m-4 rounded-lg"
+    >
+      <section>
         <h2>Ejercicios en HTML</h2>
         <p>Contenedor de ejercicio realizados en htmlt.</p>
       </section>
-      <section>
-        <article class=" max-w-[150px] h-[100px] flex flex-row gap-4 justify-evenly items-center">
-          <span class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white">
-          <i class="bi bi-window-sidebar"></i>
-        </span>
+      <section
+        class="w-full h-[500px] flex flex-wrap gap-4 p-4 bg-[#e1e1e1] rounded-lg overflow-auto"
+      >
+        <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
+        </article>
+        
+                <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
         </article>
 
+                <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
+        </article>
+
+                <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
+        </article>
+
+                <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
+        </article>
+
+                <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
+        </article>
+
+                <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
+        </article>
+
+                <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
+        </article>
+
+                <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
+        </article>
+
+                <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
+        </article>
+
+                <article
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+        >
+          <span class="flex flex-col justify-start items-center gap-2">
+            <h3>Estructura Html</h3>
+            <p>Todas las etiquetas de Html</p>
+          </span>
+          <span
+            class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
+          >
+            <i class="bi bi-window-sidebar"></i>
+          </span>
+        </article>
+       
       </section>
     </main>
   </body>
-
 </html>
