se agrega la botton

--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -20,10 +20,19 @@
     <main
       class="w-[1200px] h-[600px] text-[#333] flex flex-col justify-start items-center gap-4 bg-[#fff] p-4 m-4 rounded-lg"
     >
-      <section>
+      <section class="w-full h-[100px] flex flex-row justify-between items-center p-4 bg-[#e1e1e1] rounded-lg">
+        <section class="w-[90%] h-full">
         <h2>Ejercicios en HTML</h2>
         <p>Contenedor de ejercicio realizados en htmlt.</p>
+        </section>
+        <section class="w-[10%] h-full flex justify-center items-center rounded-lg">
+          <button type="button" class="btn btn-outline-primary w-[80px] h-[80px] bg-[#606060] p-2 rounded-full flex justify-center items-center">
+            <i class="bi bi-house-up-fill text-[#93c05c] w-[50px]"></i>
+          </button>
+        </section>
       </section>
+
+      <!-- Secciones de los card de los ejercicios  -->
       <section
         class="w-full h-[500px] flex flex-wrap gap-4 p-4 bg-[#e1e1e1] rounded-lg overflow-auto"
       >
@@ -40,8 +49,8 @@
             <i class="bi bi-window-sidebar"></i>
           </span>
         </article>
-        
-                <article
+
+        <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
           <span class="flex flex-col justify-start items-center gap-2">
@@ -55,7 +64,7 @@
           </span>
         </article>
 
-                <article
+        <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
           <span class="flex flex-col justify-start items-center gap-2">
@@ -69,7 +78,7 @@
           </span>
         </article>
 
-                <article
+        <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
           <span class="flex flex-col justify-start items-center gap-2">
@@ -83,7 +92,7 @@
           </span>
         </article>
 
-                <article
+        <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
           <span class="flex flex-col justify-start items-center gap-2">
@@ -97,7 +106,7 @@
           </span>
         </article>
 
-                <article
+        <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
           <span class="flex flex-col justify-start items-center gap-2">
@@ -111,7 +120,7 @@
           </span>
         </article>
 
-                <article
+        <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
           <span class="flex flex-col justify-start items-center gap-2">
@@ -125,7 +134,7 @@
           </span>
         </article>
 
-                <article
+        <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
           <span class="flex flex-col justify-start items-center gap-2">
@@ -139,7 +148,7 @@
           </span>
         </article>
 
-                <article
+        <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
           <span class="flex flex-col justify-start items-center gap-2">
@@ -153,7 +162,7 @@
           </span>
         </article>
 
-                <article
+        <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
           <span class="flex flex-col justify-start items-center gap-2">
@@ -167,7 +176,7 @@
           </span>
         </article>
 
-                <article
+        <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
           <span class="flex flex-col justify-start items-center gap-2">
@@ -180,7 +189,9 @@
             <i class="bi bi-window-sidebar"></i>
           </span>
         </article>
-       
+
+
+
       </section>
     </main>
   </body>
