se agrega title con tailwind a button

--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -20,15 +20,31 @@
     <main
       class="w-[1200px] h-[600px] text-[#333] flex flex-col justify-start items-center gap-4 bg-[#fff] p-4 m-4 rounded-lg"
     >
-      <section class="w-full h-[100px] flex flex-row justify-between items-center p-4 bg-[#e1e1e1] rounded-lg">
+      <section
+        class="w-full h-[100px] flex flex-row justify-between items-center p-4 bg-[#e1e1e1] rounded-lg"
+      >
         <section class="w-[90%] h-full">
-        <h2>Ejercicios en HTML</h2>
-        <p>Contenedor de ejercicio realizados en htmlt.</p>
+          <h2>Ejercicios en HTML</h2>
+          <p>Contenedor de ejercicio realizados en htmlt.</p>
         </section>
-        <section class="w-[10%] h-full flex justify-center items-center rounded-lg">
-          <button type="button" class="btn btn-outline-primary w-[80px] h-[80px] bg-[#606060] p-2 rounded-full flex justify-center items-center">
-            <i class="bi bi-house-up-fill text-[#93c05c] w-[50px]"></i>
-          </button>
+        <section
+          class="w-[10%] h-full flex justify-center items-center rounded-lg"
+        >
+          <a
+            type="button"
+            href="../../index.html"
+            class="btn btn-outline-primary relative group w-[80px] h-[80px] bg-[#606060] p-2 rounded-full flex justify-center items-center"
+          >
+            <i
+              class="bi bi-house-up-fill text-[#93c05c] text-[50px] leading-none"
+            ></i>
+            <!-- Tooltip -->
+            <span
+              class="absolute top-[110%] left-1/2 -translate-x-1/2 opacity-0 group-hover:opacity-100 bg-black text-white text-sm px-2 py-1 rounded transition-all duration-200 whitespace-nowrap shadow-lg"
+            >
+              Ir al inicio
+            </span>
+          </a>
         </section>
       </section>
 
@@ -189,9 +205,6 @@
             <i class="bi bi-window-sidebar"></i>
           </span>
         </article>
-
-
-
       </section>
     </main>
   </body>
