se agrega vista de estructura de hatml

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li>Multihilo</li>
             <li>Alto rendimiento</li>
             <li>
-              <a href="./Tecnologias/Html/html.html" target="_blank">Html</a>
+              <a href="./Tecnologias/Html/html.html">Html</a>
             </li>
           </ul>
         </aside>
@@ -48,7 +48,7 @@
             <div
               class="w-[80px] h-[70px] bg-[#333] text-[#fff] flex justify-center items-center rounded-lg cursor-pointer shadow-md transition-colors duration-300 icons"
             >
-               <a href="./Tecnologias/Html/html.html" target="_blank"><i class="bi bi-filetype-html text-[#de2e03]"></i></a>
+               <a href="./Tecnologias/Html/html.html"><i class="bi bi-filetype-html text-[#de2e03]"></i></a>
 
             </div>
             <div
