--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -55,10 +55,10 @@
         <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
-          <span class="flex flex-col justify-start items-center gap-2">
+          <a class="flex flex-col justify-start items-center gap-2" href="./views/Estructuras.html" >
             <h3>Estructura Html</h3>
             <p>Todas las etiquetas de Html</p>
-          </span>
+          </a>
           <span
             class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
           >
