--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -57,7 +57,7 @@
         >
           <a class="flex flex-col justify-start items-center gap-2" href="./views/Estructuras.html" >
             <h3>Estructura Html</h3>
-            <p>Todas las etiquetas de Html</p>
+            <p>Todo sobre la estructura del Html</p>
           </a>
           <span
             class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
@@ -67,12 +67,12 @@
         </article>
 
         <article
-          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md " href="./views/Etiquetas.html"
         >
-          <span class="flex flex-col justify-start items-center gap-2">
-            <h3>Estructura Html</h3>
+          <a class="flex flex-col justify-start items-center gap-2">
+            <h3>Etiquetas del Html</h3>
             <p>Todas las etiquetas de Html</p>
-          </span>
+          </a>
           <span
             class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
           >
