se agrega el href a la etiqueta a

--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -67,9 +67,9 @@
         </article>
 
         <article
-          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md " href="./views/Etiquetas.html"
+          class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md "
         >
-          <a class="flex flex-col justify-start items-center gap-2">
+          <a class="flex flex-col justify-start items-center gap-2"  href="./views/Etiquetas.html">
             <h3>Etiquetas del Html</h3>
             <p>Todas las etiquetas de Html</p>
           </a>
