se agrega pagina de estructura sitio web en html

--- a/Tecnologias/Html/html.html
+++ b/Tecnologias/Html/html.html
@@ -125,10 +125,10 @@
         <article
           class="max-w-[250px] h-[100px] flex flex-row gap-2 justify-evenly items-center p-2 rounded-lg bg-white shadow-md"
         >
-          <span class="flex flex-col justify-start items-center gap-2">
-            <h3>Estructura Html</h3>
-            <p>Todas las etiquetas de Html</p>
-          </span>
+          <a class="flex flex-col justify-start items-center gap-2" href="./views/EstructuraWeb.html">
+            <h3>Estructura sitio Web Html</h3>
+            <p>Etiquetas de Un sitio web Html</p>
+          </a>
           <span
             class="w-[80px] h-[80px] p-2 flex justify-center items-center rounded-lg bg-green-300 text-white"
           >
